<resources>
	<string name="app_name">DriveStyle</string>
	<string name="title_track_detail">Details</string>
	<string name="no_data">No data</string>
	<string name="trip_list_title">Trips</string>
	<string name="settings_title">Settings</string>
	<string name="logout_title">Log out</string>
	<string name="menu_filter">Filter</string>
	<string name="menu_clear">Clear</string>
	<string name="refresh">Refresh</string>
	<string name="nav_all">All</string>
	<string name="nav_brake">Braking</string>
	<string name="nav_turn">Turn</string>
	<string name="nav_lane_change">Lane change</string>
	<string name="trips_cleared">Trips cleared</string>
	<string name="loading_trips_error">Error while loading trips</string>
	<string name="label_brake">Brake</string>
	<string name="label_turn">Turn</string>
	<string name="label_lane_change">Lane change</string>
	<string name="label_all">All</string>
	<string name="successfully_saved_trip_message">Trip saved</string>
	<string name="no_trips_all">You have no trips yet</string>
	<string name="no_trips_add">Tap plus button to add</string>
	<string name="no_trips_brake">You have no brake scenarios</string>
	<string name="no_trips_turn">You have no turn scenarios</string>
	<string name="no_trips_lane_change">You have no lane change scenarios</string>
	<string name="title_activity_add_trip_activty">AddTripActivty</string>
	<string name="action_settings">Settings</string>
	<string name="button_back">Back</string>
	<string name="button_next">Next</string>
	<string name="stepper_empty">\u2219</string>
	<string name="stepper_marked">\u2022</string>
	<string name="calibrating_step">Calibrating step</string>
	<string name="accelerometer_sensor">Accelerometer sensor</string>
	<string name="location_sensor">Location sensor</string>
	<string name="latitude">Latitude</string>
	<string name="longitude">Longitude</string>
	<string name="altitude">Altitude</string>
	<string name="speed">Speed</string>
	<string name="acceleration_x">Acceleration X</string>
	<string name="acceleration_y">Acceleration Y</string>
	<string name="acceleration_z">Acceleration Z</string>
	<string name="title">Title</string>
	<string name="button_done">Done</string>
	<string name="menu_export">Export</string>
	<string name="message_export_dialog">Enter the file name. The file will be exported into /Download/DriveStyle/</string>
	<string name="cancel">Cancel</string>
	<string name="filename">Filename</string>
	<string name="export">Export</string>
	<string name="menu_export_all">Export All</string>
	<string name="export_succeeded">Exported</string>
	<string name="export_failed">Export failed</string>
	<string name="button_open">Open</string>
	<string name="invalid_filename">Invalid filename</string>
	<string name="crashes_sent">Crash report has been sent</string>
	<string name="crashes_not_sent">Crash report hasn\'t been sent</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="dialog_uninstall_old_package">In order to work correctly the old application have to be uninstalled. Uninstall it now?</string>
	<string name="menu_delete">Delete</string>
	<string name="saving_data">Saving data</string>
	<string name="location_data_error">Location data error</string>
	<string name="calibrating_instruction">The device will record last 5 seconds of the trip. Wait till Accelerometer sensor is calibrated. Location sensor calibration is not obligatory.</string>
	<string name="pending">Pending...</string>
</resources>
