<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context="eu.vmpay.drivestyle.addTrip.AddTripFragment">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">

		<TextView
			android:id="@+id/tvStepTitle"
			style="@style/StepTitleStyle"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/calibrating_step"/>

		<LinearLayout
			android:id="@+id/llFirstStep"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:padding="@dimen/medium_padding"
			android:visibility="visible">

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center_vertical"
				android:orientation="horizontal">

				<ProgressBar
					android:id="@+id/pbAcc"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:indeterminate="true"/>

				<ImageView
					android:id="@+id/ivAcc"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:padding="@dimen/medium_padding"
					android:visibility="gone"
					app:srcCompat="@drawable/ic_done_black_24dp"/>

				<TextView
					style="@style/CommonTextStyle"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/accelerometer_sensor"/>

			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center_vertical"
				android:orientation="horizontal">

				<ProgressBar
					android:id="@+id/pbLocation"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:indeterminate="true"/>

				<ImageView
					android:id="@+id/ivLocation"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:padding="@dimen/medium_padding"
					android:visibility="gone"
					app:srcCompat="@drawable/ic_done_black_24dp"/>

				<TextView
					style="@style/CommonTextStyle"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/location_sensor"/>

			</LinearLayout>

			<TextView
				style="@style/CommonTextStyle"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/calibrating_instruction"/>

		</LinearLayout>

		<LinearLayout
			android:id="@+id/llSecondStep"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:padding="@dimen/medium_padding"
			android:visibility="gone">

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">

				<LinearLayout
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:orientation="vertical">

					<TextView
						style="@style/CommonTextStyle"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:text="@string/latitude"/>

					<TextView
						style="@style/CommonTextStyle"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:text="@string/longitude"/>

					<TextView
						style="@style/CommonTextStyle"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:text="@string/altitude"/>

					<TextView
						style="@style/CommonTextStyle"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:text="@string/speed"/>

					<TextView
						style="@style/CommonTextStyle"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:text="@string/acceleration_x"/>

					<TextView
						style="@style/CommonTextStyle"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:text="@string/acceleration_y"/>

					<TextView
						style="@style/CommonTextStyle"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:text="@string/acceleration_z"/>

				</LinearLayout>

				<LinearLayout
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:orientation="vertical"
					android:paddingEnd="@dimen/small_padding"
					android:paddingStart="@dimen/small_padding">

					<TextView
						android:id="@+id/tvLatitude"
						style="@style/CommonTextStyle"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:text="@string/pending"/>

					<TextView
						android:id="@+id/tvLongitude"
						style="@style/CommonTextStyle"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:text="@string/pending"/>

					<TextView
						android:id="@+id/tvAltitude"
						style="@style/CommonTextStyle"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:text="@string/pending"/>

					<TextView
						android:id="@+id/tvSpeed"
						style="@style/CommonTextStyle"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:text="@string/pending"/>

					<TextView
						android:id="@+id/tvAccX"
						style="@style/CommonTextStyle"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:text="@string/pending"/>

					<TextView
						android:id="@+id/tvAccY"
						style="@style/CommonTextStyle"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:text="@string/pending"/>

					<TextView
						android:id="@+id/tvAccZ"
						style="@style/CommonTextStyle"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:text="@string/pending"/>

				</LinearLayout>

			</LinearLayout>

			<ProgressBar
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:indeterminate="true"/>

		</LinearLayout>

		<LinearLayout
			android:id="@+id/llThirdStep"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:padding="@dimen/medium_padding"
			android:visibility="gone">

			<RadioGroup
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

				<android.support.v7.widget.AppCompatRadioButton
					android:id="@+id/rbnBrake"
					style="@style/RadioButtonStyle"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:checked="true"
					android:text="@string/label_brake"
					app:buttonTint="@color/colorAccent"/>

				<android.support.v7.widget.AppCompatRadioButton
					android:id="@+id/rbnTurn"
					style="@style/RadioButtonStyle"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/label_turn"
					app:buttonTint="@color/colorAccent"/>

				<android.support.v7.widget.AppCompatRadioButton
					android:id="@+id/rbnLaneChange"
					style="@style/RadioButtonStyle"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/label_lane_change"
					app:buttonTint="@color/colorAccent"/>

			</RadioGroup>

			<android.support.design.widget.TextInputLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

				<EditText
					android:id="@+id/etName"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/title"
					android:imeActionId="@+id/login"
					android:imeOptions="actionDone"
					android:inputType="textAutoComplete"
					android:maxLines="1"/>

			</android.support.design.widget.TextInputLayout>

			<LinearLayout
				android:id="@+id/llSavingData"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center_horizontal"
				android:orientation="vertical"
				android:visibility="gone">

				<ProgressBar
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:indeterminate="true"/>

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/saving_data"/>

			</LinearLayout>

		</LinearLayout>

	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="bottom"
		android:gravity="center_vertical"
		android:orientation="horizontal"
		app:elevation="@dimen/default_elevation">

		<Button
			android:id="@+id/btnBack"
			style="@style/BackButtonStyle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/button_back"
			android:visibility="invisible"/>

		<LinearLayout
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:gravity="center"
			android:orientation="horizontal">

			<TextView
				android:id="@+id/tvFirst"
				style="@style/stepperStyle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/stepper_marked"
				android:textAlignment="center"
				android:textColor="@color/colorAccent"/>

			<TextView
				android:id="@+id/tvSecond"
				style="@style/stepperStyle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/stepper_empty"
				android:textAlignment="center"/>

			<TextView
				android:id="@+id/tvThird"
				style="@style/stepperStyle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/stepper_empty"
				android:textAlignment="center"/>

		</LinearLayout>

		<Button
			android:id="@+id/btnNext"
			style="@style/ProceedButtonStyle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:enabled="false"
			android:text="@string/button_next"/>

	</LinearLayout>

</android.support.design.widget.CoordinatorLayout>
